[workspace]
resolver = "2"
members = [
  "crates/libcni",
  "crates/libcri",
  "crates/libcsi",
  "crates/liboci",
  "crates/support",

  "examples/local-dir-csi",
]

[workspace.dependencies]

[workspace.dependencies.libcni]
path = "crates/libcni"

[workspace.dependencies.libcri]
path = "crates/libcri"

[workspace.dependencies.libcsi]
path = "crates/libcsi"

[workspace.dependencies.liboci]
path = "crates/liboci"

[workspace.dependencies.support]
path = "crates/support"
