[package]
name = "libcni"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cnitool"
path = "src/cnitool.rs"

[lib]
name = "libcni"

[dependencies]

[dependencies.support]
workspace = true

[dependencies.semver]
version = "1.0.23"

[dependencies.serde]
version = "1.0.210"
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0.128"

[dependencies.sha2]
version = "0.10.8"