[package]
name = "libcni"
version = "0.1.0-dev"
edition = "2021"

[[bin]]
name = "cnitool"
path = "src/cnitool.rs"

[lib]
name = "libcni"

[dependencies]
regex= "1.11.0"

[dependencies.macaddr]
version = "1.0.1"

[dependencies.ipnetwork]
version = "0.20.0"

[dependencies.semver]
version = "1.0.23"

[dependencies.serde]
version = "1.0.210"
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0.128"

[dependencies.sha2]
version = "0.10.8"

[dependencies.support]
workspace = true