[package]
name = "libcri"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.prost]
version = "0.13.3"

[dependencies.serde]
version = "1.0.210"
features = [ "derive" ]

[dependencies.tonic]
version = "0.12.3"

[build-dependencies]

[build-dependencies.tonic-build]
version = "0.12.3"
default-features = false
features = [ "prost", "transport" ]